xen/build: Nuke include/{config,generated} during clean
Otherwise a stale generated Kconfig may still be used after a tree-wide clean.

Signed-off-by: Andrew Cooper <andrew.cooper3@citrix.com>
Acked-by: Jan Beulich <jbeulich@suse.com>
Acked-by: Wei Liu <wei.liu2@citrix.com>

--- a/xen/include/Makefile
+++ b/xen/include/Makefile
@@ -144,5 +144,5 @@ all: $(BASEDIR)/include/asm-x86/cpuid-autogen.h
 endif
 
 clean::
-	rm -rf compat headers*.chk
+	rm -rf compat config generated headers*.chk
 	rm -f $(BASEDIR)/include/asm-x86/cpuid-autogen.h
