--- a/tools/firmware/rombios/32bit/Makefile
+++ b/tools/firmware/rombios/32bit/Makefile
@@ -15,7 +15,7 @@ all: subdirs-all
 
 .PHONY: clean
 clean: subdirs-clean
-	rm -rf *.o $(TARGET) $(DEPS)
+	rm -rf *.o $(TARGET) $(DEPS_RM)
 
 .PHONY: distclean
 distclean: subdirs-distclean
