--- a/tools/xentrace/Makefile
+++ b/tools/xentrace/Makefile
@@ -44,7 +44,7 @@ endif
 
 .PHONY: clean
 clean:
-	$(RM) *.a *.so *.o *.rpm $(BIN) $(SBIN) $(LIBBIN) $(DEPS)
+	$(RM) *.a *.so *.o *.rpm $(BIN) $(SBIN) $(LIBBIN) $(DEPS_RM)
 
 .PHONY: distclean
 distclean: clean
