DEPS handling: Use DEPS_INCLUDE everywhere
DEPS_INCLUDE is currently the same as DEPS, so no functional change.

This patch is the result of this perl rune:

  git-grep -l 'include.*DEPS' | xargs perl -i -pe 'next unless m/^-?include/; s/\bDEPS\b/DEPS_INCLUDE/'

I have verified that I haven't missed anything, with this rune:

  git-grep '\bDEPS\b'

Reported-by: Jan Beulich <JBeulich@suse.com>
CC: Wei Liu <wei.liu2@citrix.com>
Signed-off-by: Ian Jackson <Ian.Jackson@eu.citrix.com>
Acked-by: Jan Beulich <jbeulich@suse.com>
Acked-by: Wei Liu <wei.liu2@citrix.com>

--- a/tools/console/Makefile
+++ b/tools/console/Makefile
@@ -54,4 +54,4 @@ uninstall:
 	rm -f $(DESTDIR)$(LIBEXEC_BIN)/xenconsole
 	rm -f $(DESTDIR)$(sbindir)/xenconsoled
 
--include $(DEPS)
+-include $(DEPS_INCLUDE)
