--- a/tools/tests/mem-sharing/Makefile
+++ b/tools/tests/mem-sharing/Makefile
@@ -26,4 +26,4 @@ distclean: clean
 memshrtool: memshrtool.o
 	$(CC) -o $@ $< $(LDFLAGS) $(LDLIBS_libxenctrl)
 
--include $(DEPS)
+-include $(DEPS_INCLUDE)
