--- a/tools/xenpmd/Makefile
+++ b/tools/xenpmd/Makefile
@@ -28,4 +28,4 @@ uninstall:
 xenpmd: xenpmd.o Makefile
 	$(CC) $(LDFLAGS) $< -o $@ $(LDLIBS) $(APPEND_LDFLAGS)
 
--include $(DEPS)
+-include $(DEPS_INCLUDE)
